<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tp_mobile_v2.MainActivity" >

    <item android:id="@+id/menu_setting"
          android:icon="@drawable/icon_setting"
          android:orderInCategory="100"
          android:title="@string/title_setting" />
    
    <item android:id="@+id/menu_reset"
          android:icon="@drawable/icon_setting"
          android:orderInCategory="100"
          android:title="@string/title_reset" />
    
   <!-- <item android:id="@+id/menu_language"
          android:icon="@drawable/icon_language"
          android:orderInCategory="100"
          android:title ="@string/title_language" />  --> 
    
    <item android:id="@+id/menu_about"
          android:orderInCategory="100"
          android:title="@string/title_about"     />

    <item android:id="@+id/menu_setAlarm"
        android:icon="@drawable/icon_exit"
        android:orderInCategory="100"
        android:title="@string/title_alarm" />

    <item android:id="@+id/menu_exit"
          android:icon="@drawable/icon_exit"
          android:orderInCategory="100"
          android:title="@string/title_exit" />

</menu>
