<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="365dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/txtNewPass"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/txt_IsDashBroad" />

            <RelativeLayout
                android:layout_width="41dp"
                android:layout_height="match_parent" >

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/G1radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_txt_false" />

                <RadioButton
                    android:id="@+id/G1radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_txt_true" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/txt_location_DashBroad" />

            <RelativeLayout
                android:layout_width="22dp"
                android:layout_height="wrap_content" >

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/G2radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_txt_p1" />

                <RadioButton
                    android:id="@+id/G2radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_txt_p2" />

                <RadioButton
                    android:id="@+id/G2radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_txt_p3" />
                <RadioButton
                    android:id="@+id/G2radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_txt_p4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#FFFFFF"  >

            <TextView
                android:id="@+id/txtTenReport"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/radio_txt_name_report" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" 
                android:layout_weight="0.2"
                 >
            </RelativeLayout>

            <EditText
                android:id="@+id/edit_name_report"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_text" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.22" >
            </RelativeLayout>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_exit_text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>