<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/desc"
            android:layout_margin="30dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/user" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
            </RelativeLayout>

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg"
                android:layout_marginRight="20dp"
                android:hint="@string/text_view_user_name_hint"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.17"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/cb_selector" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/text_checkBox_save_account" />

        </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginRight="20dp"
           android:layout_marginTop="20dp" >

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="0.87" >
           </RelativeLayout>

           <Button
               android:id="@+id/btnLogin"
               android:layout_width="108dp"
               android:layout_height="55dp"
               android:layout_gravity="right"
               android:layout_marginLeft="20dp"
               android:layout_weight="0.07"
               android:visibility="gone"
               android:text="@string/button_login_text"
               android:textColor="#000000" />

       </LinearLayout>

    </LinearLayout>

</RelativeLayout>
